--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "redis": "^4.6.13",
     "rotating-file-stream": "^3.2.1",
     "socket.io": "^4.7.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^4.15.0",
     "url": "^0.11.3"
   },
