--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,7 +54,7 @@ jobs:
 
     steps:
       - name: Deploy to production
-        uses: susrithasabbini/hungrezy-backend
+        uses: susrithasabbini/hungrezy-backend@v1.0.0
         with:
           service-id: ${{ secrets.SERVICE_ID }} # Can be found as part of the Deploy Hook
           api-key: ${{ secrets.RENDER_API_KEY }} # Create your API key in Render Dashboard > Account Settings
